--- a/en/cultpedia/cli.html
+++ b/en/cultpedia/cli.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.BhX5jokk.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.BXZs1A7j.js"></script>
+    <script type="module" src="/assets/app.CfvBxvBB.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme.DvZjA0rR.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.BWs1ssKI.js">
     <link rel="modulepreload" href="/assets/chunks/framework.BCFlG0KT.js">
     <link rel="modulepreload" href="/assets/en_cultpedia_cli.md.B9K2IkiN.lean.js">
     <link rel="icon" href="/favicon.svg">
